Redo import workflow
